--- a/css/style.css
+++ b/css/style.css
@@ -11,31 +11,35 @@
     font-weight: 400;
     width: 100vw;
     height: 100vh;
+    background: #d3d3d3;
   }
 
 
   .container {
+    background-color:#d3d3d3;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    height: 100%;
+    display: grid;
+    margin: auto;
+    gap: 1rem;
     align-items: center;
-    background: #d3d3d3;
+    max-width: 1200px;
   }
   
   .card {
     border-radius: 16px;
     background: #fff;
-    width: 360px;
-    margin: 1rem;
+    max-width: 360px;
+    margin: 1.5rem auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     transition: transform 0.3s ease-in-out;
+    height: max-content;
   }
   .card:hover {
-      transform: scale(1.1)
+    transform: scale(1.05)
   }
   .img-container {
       position: relative;
@@ -152,4 +156,18 @@
 }
 
 
+@media(min-width: 768px){
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    gap: 1rem;
+  }
+}
+@media(min-width: 1100px){
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+  }
+}
 
